X-editable changelog
=============================
          

Version 1.0.1 wip
----------------------------          
[enh #6] do not preventDetault() in click when toggle='manual'. This allows to have clickable links (vitalets)         
[bug #3] should not mark element with unsave css if url is user's function (vitalets)         
          
                 
Version 1.0.0 Nov 19, 2012 
----------------------------
Initial release. This library is new life of bootstrap-editable (1.1.4) that was strongly refactored and improved.
Main features:
- support not only bootstrap but any core library: bootstrap, jquery-ui or pure jquery 
- different container classes to show form: popover, tooltip, poshytip, etc
- inline and popup versions 
- new directory structure and logic in separate js files allowing easy contribution
                                                                
It is not fully compatible with bootstrap-editable but has mainly the same interface and api.
Here list of differences to help you to upgrade your application:

[change] 'toggle' option value can be only click|manual (not toggling element id). In case of 'manual' you should write handler calling 'show' method.
[change] 'validate' option cannot be defined as object anymore.
[change] events 'init', 'update', 'shown', 'hidden' removed. Events 'save', 'cancel' added. Event 'render' remains. 
[change] input's optiom 'template' renamed to 'tpl' (to exclude conflict with container's template).
[change] value can be stored internaly as object (previously was always string). Usefull for date inupt.
[change] 'error' callback option is removed. 'success' callback remained.
[enh] 'source' option in select can be array of structure [{value: 1, text: 'abc'}, {...}]. This allows to keep ordering of items in dropdown list. Previous format is supported for compability.
[enh] api method 'setValue' to set manually value of editable.