@@ -4,6 +4,7 @@ X-editable changelog
 
 Version 1.0.1 wip
 ----------------------------          
+[enh #1] params can be a function to calc it dynamically (vitalets)         
 [enh #6] do not preventDetault() in click when toggle='manual'. This allows to have clickable links (vitalets)         
 [bug #3] should not mark element with unsave css if url is user's function (vitalets)         
           
